src/objects/Carriers__c.object
<CustomObject>
    <fields>
        <fullName>AccountID__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Carriers</relationshipLabel>
        <relationshipName>Carriers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Carrier__c</fullName>
        <inlineHelpText>Enter the carrier name contracted with this office location.</inlineHelpText>
        <label>Carrier</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plans__c</fullName>
        <inlineHelpText>Enter the plans associated with this carrier</inlineHelpText>
        <label>Plans</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <label>Carrier</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Carriers Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Carriers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>